# Skyhealth-Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy_prod.yml
apps/: climate_map.py  climate_map_timeslider.py  streamlit_app.py
apps/utils/: maps.py
conf/: core-site.xml  log4j2.properties  spark-defaults.conf
data/: locations.csv
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: external_table.sql  utils.sql
dbt/models/: sources.yml
dbt/models/gold/: climate_gold_anomalies.sql  climate_gold_monthly.sql  climate_gold_normals_1991_2020.sql  schema.yml
dbt/models/silver/: climate_silver_daily_features.yml
dbt/tests/generic/: accepted_range.sql
docker/: lightdash.Dockerfile  spark-base.Dockerfile  streamlit.Dockerfile
infra/ansible/: site.yml
infra/ansible/group_vars/: all.yml
infra/ansible/inventories/production/: hosts.ini
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
lightdash/: .env.example  lightdash.yml
orchestrate/runbooks/: README.md
orchestrate/submitters/dbt_builder/: Dockerfile  main.py
orchestrate/submitters/spark_submitter/: Dockerfile  main.py
pipelines/: backfill.py  clickhouse_io.py  daily.py  definitions.py  publish_bigquery.py  validation.py
pipelines/assets/: __init__.py  job.py  requirements.txt
pipelines/assets/01_bronze/: openmeteo.py
pipelines/assets/02_silver/: climate_daily_features.py
pipelines/assets/03_gold/: climate_daily_summary.py
pipelines/jobs/: bronze_openmeteo.py  gold_climate_daily_summary.py  job.py  silver_climate_daily_features.py
pipelines/jobs/utils/: io.py  schemas.py
pipelines/utils/: io.py  session.py
skyfeed/: config.py
skyhealth/: clickhouse_io.py  config.py  publish_bigquery.py  validation.py
skyhealth/orchestration/: definitions.py
spark/: requirements.txt
spark/jobs/: bronze_openmeteo.py  gold_climate_daily_summary.py  silver_climate_daily_features.py
spark/jobs/utils/: cli.py  io.py  log.py  schemas.py  session.py
tests/: test_features.py
(+37 files in other folders)
